Fixed some of the merging step overlap

--- a/learnsortapp/src/Lvl2-MergeSort/MergeSortComponent1.css
+++ b/learnsortapp/src/Lvl2-MergeSort/MergeSortComponent1.css
@@ -93,35 +93,41 @@
 
 .instructions1{
     background-color: #ffe9ed;
-    margin-top: -60px;
-    margin-left: 30px;
-    height: 120px;
-    width: 280px;
+    margin-top: -110px;
+    margin-left: 5px;
+    height: 170px;
+    width: 320px;
     padding: 1%;
     text-align: center;
     display: none;
     
 }
-.sort-title-background11 {
-    margin-left: auto;
-    margin-right: auto;
-    position: absolute;
-    z-index: -1;
-    width: 474px;
-    height: 40px;
-    margin-top: 60px;
-    background: rgba(250, 153, 28, 0.35);
- }
- 
- .sort-title11 { 
+ .sort-title2{
+    position: relative;
     width: auto;
-    margin-top: auto;
+    
+    left: 240px;
+
+    
     font-family: Montserrat;
     font-style: normal;
     font-weight: bold;
     font-size: 48px;
     line-height: 59px;
-    padding-top: 40px
+    
+    color: #000000;
+ }
+
+ .sort-title-background2
+ {
+    position: relative;
+    width: 474px;
+    height: 40px;
+
+    left: -120px;
+    top:10px;
+
+    background: rgba(250, 153, 28, 0.35); 
  }
 
 .gen-num-button1 {
@@ -129,7 +135,7 @@
     position: absolute;
     width: 280px;
     height: 30px;
-    top: 175px;
+    top: 150px;
     margin-top: 5px;
   
     background: #032539;
@@ -343,7 +349,7 @@
 
 .test0 {
     display: none;
-    margin-left: 150px;
+    margin-left: 250px;
     margin-top: 35px;
     letter-spacing: 5px;
 
@@ -466,8 +472,8 @@
 
 .userInput0 {
     display: none;
-    margin-left: 50px;
-    margin-top: 1000px;
+    margin-left: 100px;
+    margin-top: 10px;
 }
 
 .userInput1 {
@@ -813,13 +819,15 @@
 }
 
 .check-button{
-    position: center;
+    position: absolute;
+    top: 130px;
+    left: 425px;
     width: auto;
     background: #FCD8A4;
     height: 40px;    
     border: 5px solid #FCD8A4;
     box-sizing: border-box;
-    margin-left: -240px;
+
     font-family: 'Montserrat', sans-serif;
     text-align: center;
 }
@@ -858,8 +866,8 @@
 }
 
 .incorrectGrid {
-    margin-left: 350px;
-    margin-top: 560px;
+    margin-left: 15px;
+    margin-top: 220px;
     justify-content: center;
     display: grid;
     grid-template-columns: repeat(3, auto);
